--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -1,6 +1,6 @@
 (B) Fazer um historico [principalmente com vendas]
 Revalidar e conferir todas as contas e dados mostrados + refazer os testes unitarios.
-(A) Refatorar os objetos. Pensar em uma maneira melhor de organizar o codigo pois a classe esta ficando gigante, com qse 1000 linhas [isso eh muito para python?].
+(A) Refatorar os objetos. Pensar em uma maneira melhor de organizar o codigo pois a classe esta ficando gigante, com qse 1000 linhas [isso eh muito para python?]. note:RpO.txt
 Colocar na operacao o campo razao. Com o motivo para entrar e sair do trade.
 Colocar um upload do grafico na operacao.
 Colocar data limite [ou limites, com avisos] da hora de vender a ação
