--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -6,6 +6,8 @@ Pensar num esquema de atualizar as operacoes sem precisar salvar
 Ver atualizacao automatica das acoes
 Colocar internacionalizacao
 Testes unitarios
-(B) Mostrara na acao os resultados obtidos naquela acao. note:EWc.txt
-(C) Mostrar as operações anteriores feitas naquela acao
+(D) Mostrara na acao os resultados obtidos naquela acao. note:EWc.txt
+(F) Mostrar as operações anteriores feitas naquela acao
 Colocar a compra igual a venda. projetar compra e executar note:x3U.txt
+(A) Ver como o piranha esta sendo calculado para experiencia, provavelmente nao no equity e sim na propria acao #error
+Alterar o label de register etc para criar ordem. Talvez retirar o auto execute do buy?
