--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -3,10 +3,13 @@ Colocar na operacao o campo razao. Com o motivo para entrar e sair do trade.
 Colocar um upload do grafico na operacao.
 Colocar data limite [ou limites, com avisos] da hora de vender a ação
 Pensar num esquema de atualizar as operacoes sem precisar salvar
-Ver atualizacao automatica das acoes
-Colocar internacionalizacao
+(F) Ver atualizacao automatica das acoes
+(D) Colocar internacionalizacao
 Testes unitarios
-(D) Mostrara na acao os resultados obtidos naquela acao. note:EWc.txt
-(F) Mostrar as operações anteriores feitas naquela acao
+(A) Mostrara na acao os resultados obtidos naquela acao. note:EWc.txt
+Mostrar as operações anteriores feitas naquela acao
 Colocar a compra igual a venda. projetar compra e executar note:x3U.txt
 Alterar o label de register etc para criar ordem. Talvez retirar o auto execute do buy?
+(B) Refatorar os testes da api
+(C) Rever documentacao da api
+(E) Criar tela de se inscrever
