--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -3,12 +3,12 @@ Colocar na operacao o campo razao. Com o motivo para entrar e sair do trade.
 Colocar um upload do grafico na operacao.
 Colocar data limite [ou limites, com avisos] da hora de vender a ação
 Pensar num esquema de atualizar as operacoes sem precisar salvar
-(F) Ver atualizacao automatica das acoes
-(D) Colocar internacionalizacao
+(M) Ver atualizacao automatica das acoes
+(F) Colocar internacionalizacao
 Testes unitarios
 Mostrar as operações anteriores feitas naquela acao
 Colocar a compra igual a venda. projetar compra e executar note:x3U.txt
 Alterar o label de register etc para criar ordem. Talvez retirar o auto execute do buy?
-(B) Refatorar os testes da api
 (C) Rever documentacao da api
-(E) Criar tela de se inscrever
+(J) Criar tela de se inscrever
+(H) Rever Interface note:9hU.txt
