--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -9,6 +9,5 @@ Testes unitarios
 Mostrar as operações anteriores feitas naquela acao
 Colocar a compra igual a venda. projetar compra e executar note:x3U.txt
 Alterar o label de register etc para criar ordem. Talvez retirar o auto execute do buy?
-(B) Refatorar os testes da api
-(C) Rever documentacao da api
+(Z) Refatorar os testes da api note:Euo.txt
 (E) Criar tela de se inscrever
